2024-08-05 Konstantin Kushnir <chpock@gmail.com>
	* Fix build on Windows (MINGW64) with internal debugging enabled
	* Add tests for gethead/getheadmd5/gettail/gettailmd5
	* Fix gethead/gettail on memory mapped files
	* Fix memleaks for getheadmd5/gettailmd5

2024-08-04 Konstantin Kushnir <chpock@gmail.com>
	* Use memory-mapped file for readonly mounts

2024-08-03 Konstantin Kushnir <chpock@gmail.com>
	* Fix build on Windows 32-bit with Tcl9

2024-07-29 Konstantin Kushnir <chpock@gmail.com>
	* Fix build error in some environments when brotli is enabled

2024-07-27 Konstantin Kushnir <chpock@gmail.com>
	* Fix the build for Tcl9 and with --enable-internal-debug

2024-07-27 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 1.9.0

2024-07-27 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 1.8.0

2024-07-26 Konstantin Kushnir <chpock@gmail.com>
	* Add C API for mounting cookfs with parameters

2024-07-25 Konstantin Kushnir <chpock@gmail.com>
	* Add support for encryption
	* Add MD5 validation for pgindex/fsindex data
	* Add MD5 validation for pages
	* Add CI configuration with --disable-c-crypto

2024-07-20 Konstantin Kushnir <chpock@gmail.com>
	* Refactor storage format

2024-07-08 Konstantin Kushnir <chpock@gmail.com>
	* Add procedures for AES encryption/decryption
	* Rename crypt->crypto

2024-07-07 Konstantin Kushnir <chpock@gmail.com>
	* Add basic cryptographic functions
	* Add 1 test case for threads

2024-06-23 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 1.8.0

2024-06-23 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 1.7.0

2024-06-23 Konstantin Kushnir <chpock@gmail.com>
	* Add support for brotli compression
	* Refactor code

2024-06-21 Konstantin Kushnir <chpock@gmail.com>
	* Refactor compression functions

2024-06-20 Konstantin Kushnir <chpock@gmail.com>
	* Add support for Zstandard compression
	* Use resonable default compression levels

2024-06-19 Konstantin Kushnir <chpock@gmail.com>